<resources>
    <string name="app_name">Todo Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_title">Todos</string>
    <string name="complete_todo_activity_title">Completed Todos</string>
    <string name="all_tags_title">Tags</string>
    <string name="settings_title">App Settings</string>

    <string name="nav_pending_todos_text">Pending todos</string>
    <string name="nav_completed_todos_text">Completed todos</string>
    <string name="nav_tags_text">Tags</string>
    <string name="nav_settings_text">Settings</string>
    <string name="nav_find_on_facebook_text">Find us on Facebook</string>
    <string name="nav_find_on_github_text">Find us on Github</string>
    <string name="nav_rate_us_text">Rate us</string>
    <string name="nav_share_app_text">Share this app</string>
    <string name="nav_more_apps_text">More apps</string>

    <string name="no_pending_todo_text">No Pending Todo Available</string>
    <string name="pending_todo_demo_title">Pending todo demo title</string>
    <string name="pending_todo_demo_content">Pending todo demo content</string>
    <string name="tag_title_demo_text">Demo tag title</string>

    <string name="completed_todo_demo_title">Completed todo demo title</string>
    <string name="completed_todo_demo_content">Completed todo demo content</string>

    <string name="todo_info_demo_tag_text">Programming</string>
    <string name="todo_info_demo_date_text">25 Dec, 2017</string>
    <string name="todo_info_demo_time_from_text">10:20 AM</string>

    <string name="no_completed_todo_text">No Completed Todo Available</string>
    <string name="no_tags_available_text">No Tags Available</string>

    <string name="option_completed_search_text">Search</string>
    <string name="option_completed_delete_text">Delete All</string>
    <string name="option_completed_settings_text">Settings</string>

    <string name="option_tags_search_text">Search</string>
    <string name="option_tag_settings_text">Settings</string>
    <string name="option_save_todo_text">Save Todo</string>
    <string name="option_tag_edit_text">Edit</string>
    <string name="option_tag_del_text">Remove</string>

    <string name="option_pending_search_text">Search</string>
    <string name="option_pending_completed_text">Completed Todos</string>
    <string name="option_pending_settings_text">Settings</string>
    <string name="option_all_tags_text">All Tags</string>

    <string name="add_todo_dialog_title">Add New Todo</string>
    <string name="save_todo_dialog_title">Save Todo</string>
    <string name="edit_todo_dialog_title">Edit Todo</string>
    <string name="todo_title_hint">Enter todo title</string>
    <string name="todo_content_hint">Enter todo content</string>
    <string name="todo_date_hint">Enter todo date</string>
    <string name="todo_time_hint">Enter todo time</string>
    <string name="add_todo_dialog_positive_text">Add New Todo</string>
    <string name="add_todo_dialog_cancel_text">Cancel</string>
    <string name="todo_title_add_success_msg">Todo added successfully !</string>

    <string name="add_tag_dialog_title">Add New Tag</string>
    <string name="edit_tag_dialog_title">Edit Tag</string>
    <string name="add_tag_dialog_positive_text">Add New Tag</string>
    <string name="edit_tag_dialog_positive_text">Save</string>
    <string name="add_tag_dialog_cancel_text">Cancel</string>
    <string name="add_tag_text_text_color_text">Tag Text Color</string>
    <string name="add_tag_text_background_color_text">Tag Background Color</string>
    <string name="tag_title_add_success_msg">Tag added successfully !</string>
    <string name="tag_delete_dialog_title">Tag delete Confirmation</string>
    <string name="tag_delete_dialog_msg">If you delete then your todos associated with this tag will also be delete.Do you really want to deleted ?</string>
    <string name="tag_delete_cancel">Cancel</string>
    <string name="tag_delete_yes">Delete</string>
    <string name="tag_deleted_success">Tag deleted successfully !</string>
    <string name="tag_no_delete">Tag not deleted !</string>
    <string name="edit_tag_dialog_cancel_text">Cancel</string>
    <string name="tag_edit_yes">Save</string>
    <string name="tag_edit_cancel">Cancel</string>
    <string name="tag_saved_success">Tag saved successfully !</string>
    <string name="tag_no_save">Tag not changed !</string>
    <string name="tag_create_dialog_title_text">Tag create dialog</string>
    <string name="no_tag_in_the_db_text">There is no tag in the database.You need to create a tag first to continue.</string>
    <string name="create_new_tag">Create New Tag</string>


    <string name="tag_title_hint">Enter tag title</string>
    <string name="edit_tag_title_hint">Enter new tag title</string>
    <string name="pref_category_title_about">Developer Info</string>


    <string-array name="theme_names">
        <item>Default</item>
        <item>Green</item>
        <item>Red</item>
        <item>Violete</item>
    </string-array>

    <string-array name="theme_values">
        <item>Default</item>
        <item>Green</item>
        <item>Red</item>
        <item>Violete</item>
    </string-array>

</resources>
